fix mobile photo spacing

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -100,9 +100,8 @@ td:nth-child(3), td:nth-child(6) {
 }
 
 #guy-img {
-    visibility: hidden;
+    display: none;
     width: 90%;
-    margin-top: 140px;
 }
 
 button, #submit-btn {
@@ -110,17 +109,13 @@ button, #submit-btn {
     color: white;
     border: none;
     margin-top: 14px;
-    margin-bottom: 20px;
+    margin-bottom: 150px;
     padding-left: 15px;
     padding-right: 15px;
     border-radius: 5px;
     width: 166px;
     height: 50px;
     font-size: 16px;
-}
-
-#submit-btn {
-    margin-bottom: 150px;
 }
 
 #home-btn {
@@ -159,6 +154,7 @@ button, #submit-btn {
     }
 
     #guy-img {
-        visibility: visible;
+        margin: auto;
+        display: block;
     }
 }
